--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ body {
 }
 
 .section-one-background {
-  background-color: var(--navyblue);
+  background-color: var(--color-navyblue);
   padding: 188px 0;
   max-width: 1440px;
   background-repeat: no-repeat;
@@ -135,7 +135,7 @@ body {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url("/images/office.jpg");
+    url("../images/office.jpg");
   margin: auto;
 }
 
